# WyFFmpeg

./: README.md  build.gradle  gradle.properties  settings.gradle
app/src/main/cpp/: CMakeLists.txt  FFmpegManger.cpp  FFmpegVideoPlay.cpp  FFmpegVideoTrans.cpp  FFmpegWaterMark.cpp  FFmpegWaterMarkTest.cpp  MNQueue.cpp  native-lib.cpp
app/src/main/cpp/ffmpegsrc/: api-band-test.c  api-flac-test.c  api-h264-slice-test.c  api-h264-test.c  api-seek-test.c  api-threadmessage-test.c
app/src/main/cpp/include/: FFmpegManger.h  FFmpegVideoPlay.h  FFmpegVideoTrans.h  FFmpegWaterMark.h  FFmpegWaterMarkTest.h  ffmpegpch.h
app/src/main/cpp/includeopengl/: OpenGLCamera3D.h  OpenglesCameraPre.h  OpenglesTextureVideoPlay.h
app/src/main/cpp/opengl/: GLCommonUtils.cpp  OpenGLCamera3D.cpp  OpenGLShader.cpp  OpenglesCameraPre.cpp  OpenglesFlashLight.cpp  OpenglesTextureVideoPlay.cpp
glplay/src/main/cpp/: CMakeLists.txt  GLPlayJniCall.cpp  openglpalylib.cpp
glplay/src/main/cpp/WyyEGL/: EglCore.cpp  EglSurfaceBase.cpp  OffscreenSurface.cpp  WindowSurface.cpp
glplay/src/main/cpp/includeopengl/: AndroidMediaNdkCapture.h  CommonUtils.h  EGLSurfaceViewVideoRender.h  EglCore.h  EglSurfaceBase.h  GLDrawTextVideoRender.h  GLFBOPostProcessing.h  GLFboDrawTextVideoRender.h  GLRenderLooper.h  GLShaders.h  GLThread.h  GLVideoRendererYUV420.h  Looper.h  OffscreenSurface.h  OpenGLShader.h  OpenglesFlashLight.h  OpenglesSurfaceViewVideoRender.h  OpenglesTextureFilterRender.h  OpenglesTextureVideoPlay.h  OpenglesTexureVideoRender.h  TextureMovieEncoder2.h  VideoEncoderCore.h  VideoRendererContext.h  WindowSurface.h
glplay/src/main/cpp/looper/: GLRenderLooper.cpp  Looper.cpp
glplay/src/main/cpp/opengl/: EGLSurfaceViewVideoRender.cpp  GLDrawTextVideoRender.cpp  GLFBOPostProcessing.cpp  GLFboDrawTextVideoRender.cpp  GLThread.cpp  GLUtils.cpp  OpenGLCamera3D.cpp  OpenGLShader.cpp  OpenglesCameraPre.cpp  OpenglesFlashLight.cpp  OpenglesSurfaceViewVideoRender.cpp  OpenglesTextureFilterRender.cpp  OpenglesTextureVideoPlay.cpp  OpenglesTexureVideoRender.cpp
glplay/src/main/cpp/record/: TextureMovieEncoder2.cpp  VideoEncoderCore.cpp
glplay/src/main/cpp/test/: CommonUtils.cpp  GLVideoRendererYUV420.cpp  GLVideoRendererYUV420Filter.cpp  VKUtils.cpp  VKVideoRendererYUV420.cpp  VideoRenderer.cpp  VideoRendererContext.cpp
h264/src/main/cpp/: CMakeLists.txt  H264JniCall.cpp  H264NaluParse.cpp  h264nal.cc
h264/src/main/cpp/h264/: bit_buffer.cc  h264_bitstream_parser.cc  h264_bitstream_parser_state.cc  h264_common.cc  h264_dec_ref_pic_marking_parser.cc  h264_hrd_parameters_parser.cc  h264_nal_unit_header_parser.cc  h264_nal_unit_header_svc_extension_parser.cc  h264_nal_unit_parser.cc  h264_nal_unit_payload_parser.cc  h264_pps_parser.cc  h264_pred_weight_table_parser.cc  h264_prefix_nal_unit_parser.cc  h264_ref_pic_list_modification_parser.cc  h264_rtp_fua_parser.cc  h264_rtp_parser.cc  h264_rtp_single_parser.cc  h264_rtp_stapa_parser.cc  h264_slice_header_in_scalable_extension_parser.cc  h264_slice_header_parser.cc  h264_slice_layer_extension_rbsp_parser.cc  h264_slice_layer_without_partitioning_rbsp_parser.cc  h264_sps_parser.cc  h264_sps_svc_extension_parser.cc  h264_subset_sps_parser.cc  h264_vui_parameters_parser.cc
h264/src/main/cpp/h264include/: H264NaluParse.h
h264/src/main/cpp/h264include/h264nal/: h264_bitstream_parser.h  h264_common.h  h264_dec_ref_pic_marking_parser.h  h264_hrd_parameters_parser.h  h264_nal_unit_header_parser.h  h264_nal_unit_header_svc_extension_parser.h  h264_nal_unit_parser.h  h264_nal_unit_payload_parser.h  h264_pps_parser.h  h264_pred_weight_table_parser.h  h264_prefix_nal_unit_parser.h  h264_ref_pic_list_modification_parser.h  h264_rtp_fua_parser.h  h264_rtp_parser.h  h264_rtp_single_parser.h  h264_rtp_stapa_parser.h  h264_slice_header_in_scalable_extension_parser.h  h264_slice_header_parser.h  h264_slice_layer_extension_rbsp_parser.h  h264_slice_layer_without_partitioning_rbsp_parser.h  h264_sps_parser.h  h264_sps_svc_extension_parser.h  h264_subset_sps_parser.h  h264_vui_parameters_parser.h
h264/src/main/cpp/h264include/webrtc/: bit_buffer.h
h265/src/main/cpp/: CMakeLists.txt  H265JniCall.cpp  Hevc2MP4.cpp  HevcNalParse.cpp  h265nal.cc
h265/src/main/cpp/h265/: h265_aud_parser.cc  h265_bitstream_parser.cc  h265_bitstream_parser_state.cc  h265_common.cc  h265_hrd_parameters_parser.cc  h265_nal_unit_header_parser.cc  h265_nal_unit_parser.cc  h265_nal_unit_payload_parser.cc  h265_pps_parser.cc  h265_pps_scc_extension_parser.cc  h265_pred_weight_table_parser.cc  h265_profile_tier_level_parser.cc  h265_rtp_ap_parser.cc  h265_rtp_fu_parser.cc  h265_rtp_parser.cc  h265_rtp_single_parser.cc  h265_scaling_list_data_parser.cc  h265_slice_parser.cc  h265_sps_3d_extension_parser.cc  h265_sps_multilayer_extension_parser.cc  h265_sps_parser.cc  h265_sps_range_extension_parser.cc  h265_sps_scc_extension_parser.cc  h265_st_ref_pic_set_parser.cc  h265_sub_layer_hrd_parameters_parser.cc  h265_utils.cc  h265_vps_parser.cc  h265_vui_parameters_parser.cc
h265/src/main/cpp/h265include/: Hevc2MP4.h  HevcNalParse.h
h265/src/main/cpp/h265include/h265nal/: h265_aud_parser.h  h265_bitstream_parser.h  h265_common.h  h265_hrd_parameters_parser.h  h265_nal_unit_header_parser.h  h265_nal_unit_parser.h  h265_nal_unit_payload_parser.h  h265_pps_parser.h  h265_pps_scc_extension_parser.h  h265_pred_weight_table_parser.h  h265_profile_tier_level_parser.h  h265_rtp_ap_parser.h  h265_rtp_fu_parser.h  h265_rtp_parser.h  h265_rtp_single_parser.h  h265_scaling_list_data_parser.h  h265_slice_parser.h  h265_sps_3d_extension_parser.h  h265_sps_multilayer_extension_parser.h  h265_sps_parser.h  h265_sps_range_extension_parser.h  h265_sps_scc_extension_parser.h  h265_st_ref_pic_set_parser.h  h265_sub_layer_hrd_parameters_parser.h  (+2 more)
rtmplive/src/main/cpp/: AudioStreamPacket.cpp  CMakeLists.txt  RtmpInit.cpp  RtmpLiveJniCall.cpp  RtmpPusherManger.cpp  VideoStreamPacket.cpp  rtmplivelib.cpp
rtmplive/src/main/cpp/include/: AudioStreamPacket.h  RtmpInit.h  RtmpPusherManger.h  VideoStreamPacket.h
(+194 files in other folders)
